# Lab_Python-Lib

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: -feature-request--u0001f4a1-.md  bug-report--u0001f41e.md
.github/agent/: auto_pr_bot.py  list_models.py  requirements.txt
.github/scripts/: check_readme.py  pr_check.sh
.github/workflows/: auto_pr_bot.yml  ci.yml  pr_draft.yml  pr_lint.yml  publish.yml  tag.yml  test.yml  test_win.yml  test_win_hadoop.yml  time.yml  version.yml
.github/workflows/config/: config.toml
agentic_ai/: issue_20_gemini.md  issue_22_gemini.md
my_hw/: README.md
my_hw/src/: __version__.py  main.py
my_lib_2/: README.md
my_lib_2/src/: lib0.py  lib1.py  lib2.py  lib3.py  lib4.py  lib5.py  lib6.py
my_lib_2/test/test_expected/: test_8.py
recipe/: meta.yaml
